# iterative-long-term-forecasting

./: .gitignore  pyproject.toml
data/: ETTh1.csv  ETTh2.csv  T1.csv  T2.csv  T4.csv  T5.csv  mm12007.csv  sap500.csv  sunspots.csv  wiki.csv
experiments/: Experiment0.ipynb  Experiment1.ipynb
output/reports/: 20260108155016_mm12007_tabular_ld2_xgboost.json  20260108155016_mm12007_tabular_ld8_linear.json  20260108155032_mm12007_tabular_ld4_extra_trees.json  20260108155033_mm12007_tabular_ld16_lasso.json  20260108155033_mm12007_tabular_ld32_ridge.json  20260108155044_mm12007_tabular_ld2_random_forest.json  20260108155045_mm12007_tabular_ld4_lasso.json  20260108155059_mm12007_tabular_ld2_random_forest.json  20260108155128_mm12007_tabular_ld8_random_forest.json  20260108155129_mm12007_tabular_ld16_lasso.json  20260108155129_mm12007_tabular_ld8_linear.json  20260108155130_mm12007_tabular_ld2_ridge.json  20260108155130_mm12007_tabular_ld8_lasso.json  20260108155159_mm12007_tabular_ld8_random_forest.json  20260108155200_mm12007_tabular_ld32_ridge.json  20260108155201_mm12007_tabular_ld8_xgboost.json  20260108155255_mm12007_tabular_ld8_extra_trees.json  20260108155256_mm12007_tabular_ld8_lasso.json  20260108155257_mm12007_tabular_ld2_ridge.json  20260108155257_mm12007_tabular_ld8_elasticnet.json  20260108155258_mm12007_tabular_ld8_elasticnet.json  20260108155300_mm12007_tabular_ld8_xgboost.json  20260108155421_mm12007_tabular_ld16_extra_trees.json  20260108155422_mm12007_tabular_ld32_ridge.json  20260108155422_mm12007_tabular_ld4_lasso.json  (+25 more)
src/data/: preprocess.py
(+17 files in other folders)
